--- a/Configuraciones/i3/i3status.conf
+++ b/Configuraciones/i3/i3status.conf
@@ -6,6 +6,9 @@
 # ß
 # If the above line is not correctly displayed, fix your editor first!
 
+# PY3STATUS CONF
+
+
 general {
         colors = true
         interval = 5
